After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790809 - Changing display scale doesn't cause "Apply" button to appear
Changing display scale doesn't cause "Apply" button to appear
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Display
3.26.x
Other Linux
: Normal minor
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-11-24 22:25 UTC by Kerrick Staley
Modified: 2018-01-21 14:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
display: Add support for mutter's global scale requirement (2.82 KB, patch)
2017-12-18 14:57 UTC, Rui Matos
committed Details | Review

Description Kerrick Staley 2017-11-24 22:25:22 UTC
To reproduce:
1. Go into "Displays" panel (note: my current configuration is two displays, each at 200% scaling).
2. Change the "Scale" on one of the displays

Expected result:
"Apply" button appears.

Actual result:
"Apply" button does not appear.
Comment 1 Kerrick Staley 2017-11-24 22:33:46 UTC
Ah, this seems to happen because I need to set the same "Scale" setting on all displays. The "Apply" button only appears when the "Scale" setting is the same on all displays and is not equal to the current scale. Still, the messaging is rather confusing.
Comment 2 Kerrick Staley 2017-11-24 22:34:05 UTC
(Or rather the lack of messaging).
Comment 3 Rui Matos 2017-12-18 14:57:53 UTC
Created attachment 365700 [details] [review]
display: Add support for mutter's global scale requirement

If mutter requires the same scale on all logical monitors we must
propagate a scale set on one monitor to the remaining ones or we'll
fail validation leaving users wondering why it doesn't work.
Comment 4 Georges Basile Stavracas Neto 2018-01-21 14:26:42 UTC
Review of attachment 365700 [details] [review]:

The code makes perfect sense, but I don't have the hardware to test this, so I'll push them and wait for the complaints.
Comment 5 Georges Basile Stavracas Neto 2018-01-21 14:28:15 UTC
Pushing as states. Please reopen the bug if you find any issues with the patch.

Attachment 365700 [details] pushed as 1fe3f5c - display: Add support for mutter's global scale requirement